--- a/src/main/resources/com/mycompany/crudobjectdb/inicio.fxml
+++ b/src/main/resources/com/mycompany/crudobjectdb/inicio.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -29,7 +29,7 @@
    <bottom>
       <BorderPane prefHeight="40.0" prefWidth="762.0" BorderPane.alignment="CENTER">
          <center>
-            <FlowPane prefHeight="40.0" prefWidth="682.0">
+            <FlowPane hgap="20.0" prefHeight="40.0" prefWidth="682.0">
                <children>
                   <ImageView fitHeight="42.0" fitWidth="228.0" pickOnBounds="true" preserveRatio="true">
                      <FlowPane.margin>
@@ -39,8 +39,8 @@
                         <Image url="@../../../imagenes/logo.png" />
                      </image>
                   </ImageView>
-                  <Label text="Mostrando: " />
-                  <ChoiceBox fx:id="selector" prefWidth="150.0" />
+                  <Button fx:id="btnTodo" mnemonicParsing="false" onAction="#todo" text="Todo" />
+                  <Button fx:id="btnPendientes" mnemonicParsing="false" onAction="#pendientes" text="Pendientes" />
                   <Label prefHeight="47.0" prefWidth="178.0" text="Para eliminar un pedido selecciónelo y pulse el botón -, para marcarlo como recogido haga doble click en él" wrapText="true">
                      <FlowPane.margin>
                         <Insets left="20.0" />
